simple base template

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,1 +1,14 @@
-<h1>Example</h1>
+{% extends 'base.html' %}
+
+    {% block styles %}
+    {{ block.super }}
+    <h1></h1>
+    {{ block.super }}
+{% endblock %}
+
+
+{% block container %}
+
+    <h1>Home</h1>
+
+{% endblock %}
